fix color contrast

--- a/_src/css/components/_variables.scss
+++ b/_src/css/components/_variables.scss
@@ -4,10 +4,10 @@ $screen-sm: 500px;
 $screen-md: 740px;
 
 /* Colors. */
-$blue:       #09F;
-$dark-blue:  #007aCC;
+$blue:       #0079CA;
+$dark-blue:  #007ACC;
 $dark:       #333;
-$gray:       #757575;
+$gray:       #717171;
 $light-gray: #F6F6F6;
 
 /* Dimensions. */
